--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Tempo Bootstrap Template - Index</title>
+  <title>PARGA YÖNETİM</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/parga.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -48,10 +48,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#about">Biz kimiz?</a></li>
+          <li><a class="nav-link scrollto" href="#services">Hizmetlerimiz</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Referanslarımız</a></li>
+          <li><a class="nav-link scrollto" href="#team">Takımımız</a></li>
           <li><a href="blog.html">Blog</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -83,7 +83,7 @@
     <div class="hero-container">
       <h1>  <strong>PARGA</strong></h1>
       <h2>Apartman ve Site Yönetimi</h2>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
+      <h2>Müthiş hizmeti sunmak için dinamik ekibimizle hizmetinizdeyiz</h2>
       <a href="#about" class="btn-get-started scrollto">Biz kimiz?</a>
     </div>
   </section><!-- End Hero -->
@@ -130,7 +130,7 @@
         <div class="section-title">
           <h2>Hizmetlerimiz</h2>
           <h3>Sunduğumuz harika <span>hizmetler</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <!-- <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p> -->
         </div>
 
         <div class="row">
@@ -162,7 +162,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">Temizlik</a></h4>
-              <p class="description">Evinizde görmek istediğiniz temizliği yaşam alanınınızın her yanında özenle sağlıyoruz</p>
+              <p class="description">Evinizde görmek istediğiniz temizliği yaşam alanınızın her yanında özenle sağlıyoruz</p>
             </div>
           </div>
 
@@ -179,25 +179,25 @@
           <div class="col-lg-3 col-md-4 col-6 col-6">
             <div class="icon-box">
               <i class="ri-store-line" style="color: #ffbb2c;"></i>
-              <h3><a href="">Lorem Ipsum</a></h3>
+              <h3><a href="">Güvenlik</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6">
             <div class="icon-box">
               <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-              <h3><a href="">Dolor Sitema</a></h3>
+              <h3><a href="">Raporlama</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-              <h3><a href="">Sed perspiciatis</a></h3>
+              <h3><a href="">Organizasyon</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-              <h3><a href="">Magni Dolores</a></h3>
+              <h3><a href="">Tadilat</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
@@ -271,9 +271,9 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <h3>Check our <span>Portfolio</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <h2>Referanslarımız</h2>
+          <h3> <span>REFERANSLARIMIZ</span></h3>
+          <p>Bize güvenen ve bizleri seçen yaşam alanları</p>
         </div>
 
         <div class="row">
@@ -290,15 +290,15 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
+              <h4>Ahmet Urgancı İş Merkezi</h4>
               <p>App</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+<!-- 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -376,7 +376,7 @@
               <p>Web</p>
               <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
+            </div> -->
           </div>
 
         </div>
@@ -389,14 +389,14 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Pricing</h2>
-          <h3>Our Competing <span>Prices</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <h2>Fiyat</h2>
+          <h3>Her bütçeye uygun <span>fiyatlarımız</span></h3>
+          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, bütçenizden, sosyal konumuz ve bina durumunuzdan tamamen bağımsız!</p>
         </div>
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6">
+          <!-- <div class="col-lg-4 col-md-6">
             <div class="box">
               <h3>Free</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
@@ -411,7 +411,7 @@
                 <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended">
@@ -431,7 +431,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+          <!-- <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <h3>Developer</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
@@ -446,7 +446,7 @@
                 <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
