--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Hukuk</a></h4>
-              <p class="description">Hukukla alakalı bütün ihtiyaçlarınızı memnuniyetle yürütüyor ve bunu, yaşam alanınınızın huzurunu bozmadan yapıyoruz</p>
+              <p class="description">Hukukla alakalı bütün ihtiyaçlarınızı memnuniyetle yürütüyor ve bunu, yaşam alanınızın huzurunu bozmadan yapıyoruz</p>
             </div>
           </div>
 
@@ -389,9 +389,9 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Fiyat</h2>
+          <h2>Fiyatlandırma</h2>
           <h3>Her bütçeye uygun <span>fiyatlarımız</span></h3>
-          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, bütçenizden, sosyal konumuz ve bina durumunuzdan tamamen bağımsız!</p>
+          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, bütçenizden, sosyal konumuzdan ve bina durumunuzdan tamamen bağımsız!</p>
         </div>
 
         <div class="row">
@@ -632,7 +632,7 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
+                <h4>Lokasyonumuz:</h4>
                 <p>19 Mayıs mahallesi, <br>
                   Halaskargazi Cd. <br>
                   No: 226 / 24, 34360  
@@ -647,7 +647,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call: <a href="tel:+905395733474"><strong> 0 539 573 34 74</strong></a> </h4>
+                <h4>Telefon: <a href="tel:+905395733474"><strong> 0 539 573 34 74</strong></a> </h4>
                
               </div>
 
