--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">Hepsi</li>
+              <li data-filter=".filter-app">İş Merkezleri</li>
+              <!-- <li data-filter=".filter-card">Card</li>
+              <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
@@ -415,18 +415,18 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended">
-              <span class="recommended-badge">Recommended</span>
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <span class="recommended-badge">En uygunu</span>
+              <h3>Daire başı</h3>
+              <h4><sup>₺</sup>35<span> / aylık</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Aidat toplama</li>
+                <li>Temizlik</li>
+                <li>Muhasebe</li>
+                <li>Hukuk</li>
+                <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#contact" class="btn-buy">İletişime geç</a>
               </div>
             </div>
           </div>
@@ -458,7 +458,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>F.A.Q</h2>
+          <h2>Sıkça Sorulan Sorular</h2>
           <h3>Frequently Asked <span>Questions</span></h3>
         </div>
 
@@ -654,10 +654,14 @@
             </div>
 
           </div>
-
+ 
+    <input type="hidden" name="_captcha" value="false">
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formsubmit.co/amorylorch@gmail.com"  method="POST"class="php-email-form"> <input type="hidden" name="_template" value="table">
+    <input type="hidden" name="_next" value="https://www.pargayonetim.com/
+    ">
+    <input type="hidden" name="_captcha" value="false">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -711,32 +715,32 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Anasayfa</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Biz kimiz?</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Hizmetlerimiz</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Kullanım şartları</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Gizlilik politikası</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Sunduğumuz hizmetler</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Apartman ve Site Yönetimi</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Muhasebe</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Hukuk</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Temizlik</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
-          </div>
+          </div> -->
 
         </div>
       </div>
