--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<meta name="google-site-verification" content="3OqGf3dGyKlH7U4k2jntYEZsBGd8Fjl4nL3VoEit3jI" />
   <title>PARGA YÖNETİM</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
