--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta name="google-site-verification" content="3OqGf3dGyKlH7U4k2jntYEZsBGd8Fjl4nL3VoEit3jI" />
+
   <title>PARGA YÖNETİM</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -396,28 +396,28 @@
 
         <div class="row">
 
-          <!-- <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="box">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h3>Apartman</h3>
+              <h4><sup>₺</sup>50<span> / aylık</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Aidat toplama</li>
+                <li>Temizlik</li>
+                <li>Muhasebe</li>
+                <li>Hukuk</li>
+                <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended">
               <span class="recommended-badge">En uygunu</span>
-              <h3>Daire başı</h3>
-              <h4><sup>₺</sup>35<span> / aylık</span></h4>
+              <h3>Site</h3>
+              <h4><sup>₺</sup>80<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
@@ -431,22 +431,22 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h3>İş Merkezi</h3>
+              <h4><sup>₺</sup>120<span> / aylıkv</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Aidat toplama</li>
+                <li>Temizlik</li>
+                <li>Muhasebe</li>
+                <li>Hukuk</li>
+                <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
-          </div> -->
+          </div>
 
         </div>
 
@@ -538,7 +538,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/1.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -547,8 +547,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Mert Denizman</h4>
+                <span>Kurucu</span>
               </div>
             </div>
           </div>
@@ -647,7 +647,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Telefon: <a href="tel:+905395733474"><strong> 0 539 573 34 74</strong></a> </h4>
+                <h4>Telefon: <a href="tel:+905467620002"><strong> 0546 762 00 02</strong></a> </h4>
                
               </div>
 
@@ -664,17 +664,17 @@
     <input type="hidden" name="_captcha" value="false">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Adınız" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email adresiniz" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="number" class="form-control" name="subject" id="subject" placeholder="Telefonunuz" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="5" placeholder="Mesajınız" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
@@ -707,13 +707,13 @@
               <br>
               
              Şişli / İstanbul <br><br>
-              <strong>Telefon:</strong> <a href="tel:+905395733474">0 539 573 34 74</a> <br>
+              <strong>Telefon:</strong> <a href="tel:+905467620002">0546 762 00 02</a> <br>
               <strong>Email: </strong><a href="mailto:yonetimparga@gmail.com">yonetimparga@gmail.com</a>  <br>
             </p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Hakkımızda</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Anasayfa</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Biz kimiz?</a></li>
