--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@
     <section id="cta" class="cta">
       <div class="container">
 
-        <div class="text-center">
+        <!-- <div class="text-center">
           <h3>Call To Action</h3>
           <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
             laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
-        </div>
+          <a class="cta-btn" href="#">Call To Action</a> -->
+      </div>
 
       </div>
     </section><!-- End Cta Section -->
@@ -418,7 +418,7 @@
                 <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">İletişime geç</a>
               </div>
             </div>
           </div>
@@ -453,7 +453,7 @@
                 <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">İletişime geç</a>
               </div>
             </div>
           </div>
