--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="Parga,PargaYonetimi,ApartmanYonetimi" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/parga.jpg" rel="icon">
+  <link href="assets/img/pargalogo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
