--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+        <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/defauyt.png" class="img-fluid" alt="">
@@ -637,7 +637,7 @@
                 <span>Muhasebe</span>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
