--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">PARGA YÖNETİM</a></h1>
+      <h1 class="logo"><a href="www.pargayonetim.com">PARGA YÖNETİM</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Anasayfa</a></li>
           <li><a class="nav-link scrollto" href="#about">Biz kimiz?</a></li>
           <li><a class="nav-link scrollto" href="#services">Hizmetlerimiz</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Referanslarımız</a></li>
           <li><a class="nav-link scrollto" href="#team">Takımımız</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="www.pargayonetim.com">Blog</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -142,7 +142,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Apartman ve Site Yönetimi</a></h4>
-              <p class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız</p>
+              <p class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız.</p>
             </div>
           </div>
 
@@ -150,7 +150,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Muhasebe</a></h4>
-              <p class="description">Mali işlerinizi bizler yürütüyoruz ve güveniniz için minnettarız</p>
+              <p class="description">Mali işlerinizi bizler yürütüyoruz ve güveniniz için minnettarız.</p>
             </div>
           </div>
 
@@ -159,7 +159,7 @@
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Hukuk</a></h4>
               <p class="description">Hukukla alakalı bütün ihtiyaçlarınızı memnuniyetle yürütüyor ve bunu, yaşam
-                alanınızın huzurunu bozmadan yapıyoruz</p>
+                alanınızın huzurunu bozmadan yapıyoruz.</p>
             </div>
           </div>
 
@@ -168,7 +168,36 @@
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">Temizlik</a></h4>
               <p class="description">Evinizde görmek istediğiniz temizliği yaşam alanınızın her yanında özenle
-                sağlıyoruz</p>
+                sağlıyoruz.</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">Keşif</a></h4>
+              <p class="description">Yaşam alanınınızı yerinde etüd ediyor ve gerekli önerilerde bulunuyoruz.</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">Projelendirme</a></h4>
+              <p class="description">İşletme bütçenizi ihtiyacınıza göre oluşturuyoruz.</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">Denetim</a></h4>
+              <p class="description">Yaşam alanınızın haftalık, aylık denetimlerinizi yapıyoruz ve gördüğümüz eksikleri
+                gideriyoruz.</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">Geliştirme</a></h4>
+              <p class="description">Yaşam alanınızın eksiklerini görüyor ve gerekli iyileştirmeleri yapıyoruz.</p>
             </div>
           </div>
 
@@ -400,7 +429,7 @@
         <div class="section-title">
           <h2>Fiyatlandırma</h2>
           <h3>Her bütçeye uygun <span>fiyatlarımız</span></h3>
-          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, bütçenizden, sosyal konumuzdan ve bina
+          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, sosyal konumunuzdan ve bina
             durumunuzdan tamamen bağımsız!</p>
         </div>
 
@@ -621,7 +650,7 @@
             </div>
           </div>
 
-        <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/defauyt.png" class="img-fluid" alt="">
@@ -676,7 +705,7 @@
               <a href=""></a>
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email: <a href="mailto:yonetimparga@gmail.com"><strong>yonetimparga@gmail.com </strong> </a> </h4>
+                <h4>Email: <a href="mailto:info@pargayonetim.com"><strong>info@pargayonetim.com</strong> </a> </h4>
 
               </div>
 
@@ -693,7 +722,7 @@
           <input type="hidden" name="_captcha" value="false">
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="https://formsubmit.co/amorylorch@gmail.com" method="POST" class="php-email-form"> <input
+            <form action="https://formsubmit.co/info@pargayonetim.com" method="POST" class="php-email-form"> <input
                 type="hidden" name="_template" value="table">
               <input type="hidden" name="_next" value="https://www.pargayonetim.com/
     ">
@@ -746,7 +775,7 @@
 
               Şişli / İstanbul <br><br>
               <strong>Telefon:</strong> <a href="tel:+905467620002">0546 762 00 02</a> <br>
-              <strong>Email: </strong><a href="mailto:yonetimparga@gmail.com">yonetimparga@gmail.com</a> <br>
+              <strong>Email: </strong><a href="mailto:info@pargayonetim.com">info@pargayonetim.com</a> <br>
             </p>
           </div>
 
@@ -799,11 +828,11 @@
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#contact" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#contact" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#contact" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#contact" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#contact" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
