--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">Hepsi</li>
-              <li data-filter=".filter-app">İş Merkezleri</li>
-              <!-- <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li> -->
+              <li data-filter=".filter-app">İş Merkezi</li>
+              <li data-filter=".filter-card">Apartman</li>
+              <!-- <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
@@ -330,22 +330,34 @@
             <img src="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Ahmet Urgancı İş Merkezi</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <p></p>
+              <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Ahmet Urgancı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/Yeşilova.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Yeşilova Apartmanı</h4>
+              <p></p>
+              <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/Kardelen Apartmanı.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Kardelen Apartmanı</h4>
+              <p></p>
+              <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
           <!-- 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+         
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
