--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
             <div class="portfolio-info">
               <h4>Ahmet Urgancı İş Merkezi</h4>
               <p></p>
-              <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
-                title="Ahmet Urgancı"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Ahmet Urgancı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -341,8 +341,8 @@
             <div class="portfolio-info">
               <h4>Yeşilova Apartmanı</h4>
               <p></p>
-              <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
-                title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/Yeşilova.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -351,8 +351,8 @@
             <div class="portfolio-info">
               <h4>Kardelen Apartmanı</h4>
               <p></p>
-              <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
-                title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/portfolio/Kardelen Apartmanı.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
