--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
               </div>
               <div class="member-info">
                 <h4>Mert Denizman</h4>
-                <span>Satış</span>
+                <span>Satış-Pazarlama</span>
               </div>
             </div>
           </div>
@@ -657,7 +657,7 @@
               </div>
               <div class="member-info">
                 <h4>İrfan Denizman</h4>
-                <span>Müdür</span>
+                <span>(E)Emniyet Müdürü</span>
               </div>
             </div>
           </div>
