--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
               <h4>Ahmet Urgancı İş Merkezi</h4>
               <p></p>
               <a href="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Ahmet Urgancı"><i class="bx bx-plus"></i></a>
+                class="portfolio-lightbox preview-link" title="Ahmet Urgancı İş Merkezi"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -352,7 +352,17 @@
               <h4>Kardelen Apartmanı</h4>
               <p></p>
               <a href="assets/img/portfolio/Kardelen Apartmanı.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
+                class="portfolio-lightbox preview-link" title="Kardelen Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/ozerapt.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Özer Apartmanı</h4>
+              <p></p>
+              <a href="assets/img/portfolio/ozerapt.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Özer Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
