--- a/index.html
+++ b/index.html
@@ -362,7 +362,17 @@
               <h4>Özer Apartmanı</h4>
               <p></p>
               <a href="assets/img/portfolio/ozerapt.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Özer Apartmanı"><i class="bx bx-plus"></i></a>
+                class="portfolio-lightbox preview-link" title="Yaşar Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/Yaşar Apartmanı.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Yaşar Apartmanı</h4>
+              <p></p>
+              <a href="assets/img/portfolio/Yaşar Apartmanı.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Yaşar Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
