--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Ahmet Urgancı İş Merkezi</h4>
+              <h4>Ahmet Urgancı İş Merkezi - Güngören</h4>
               <p></p>
               <a href="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Ahmet Urgancı İş Merkezi"><i class="bx bx-plus"></i></a>
@@ -339,7 +339,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/Yeşilova.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Yeşilova Apartmanı</h4>
+              <h4>Yeşilova Apartmanı - Şişli</h4>
               <p></p>
               <a href="assets/img/portfolio/Yeşilova.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
@@ -349,7 +349,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/Kardelen Apartmanı.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Kardelen Apartmanı</h4>
+              <h4>Kardelen Apartmanı - Esenyurt</h4>
               <p></p>
               <a href="assets/img/portfolio/Kardelen Apartmanı.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Kardelen Apartmanı"><i class="bx bx-plus"></i></a>
@@ -359,7 +359,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/ozerapt.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Özer Apartmanı</h4>
+              <h4>Özer Apartmanı - Esenyurt</h4>
               <p></p>
               <a href="assets/img/portfolio/ozerapt.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Yaşar Apartmanı"><i class="bx bx-plus"></i></a>
@@ -369,7 +369,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/Yaşar Apartmanı.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Yaşar Apartmanı</h4>
+              <h4>Yaşar Apartmanı - Küçükçekmece</h4>
               <p></p>
               <a href="assets/img/portfolio/Yaşar Apartmanı.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Yaşar Apartmanı"><i class="bx bx-plus"></i></a>
@@ -379,10 +379,20 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/bengisuevleri.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Bengisu Evleri</h4>
+              <h4>Bengisu Evleri B Blok - Kağıthane</h4>
               <p></p>
               <a href="assets/img/portfolio/bengisuevleri.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Bengisu Evleri"><i class="bx bx-plus"></i></a>
+                class="portfolio-lightbox preview-link" title="Bengisu Evleri B Blok"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/KARACAOĞLU.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Karacaoğlu Apartmanı - Kağıthane</h4>
+              <p></p>
+              <a href="assets/img/portfolio/KARACAOĞLU.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Karacaoğlu Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
