--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <h3>İş Merkezi</h3>
-              <h4><sup>₺</sup>120<span> / aylıkv</span></h4>
+              <h4><sup>₺</sup>120<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
