--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>Apartman veya sitenize dürüst, düzenli ve sorun çözen bir firma lazımsa doğru yerdesiniz. Mülk yönetimi,
+            <p>Yaşam alanınıza dürüst, düzenli ve sorunları çözen bir firma lazımsa doğru yerdesiniz. Mülk yönetimi,
               muhasebe, hukuk, temizlik gibi apartman ve site yönetimini kapsayan bütün görevleri basit, adil ve kavga
               gürültü yaratmadan yürütüyoruz. Tecrübeli ve dinamiğiz. Telefonlarımız 7/24 açık. </p>
 
@@ -403,6 +403,16 @@
               <p></p>
               <a href="assets/img/portfolio/Salihzekiapt.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Salih Zeki Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/hilal apartmanı.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Hilal Apartmanı - Beyoğlu</h4>
+              <p></p>
+              <a href="assets/img/portfolio/hilal apartmanı.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Hilal Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
