--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/hilal apartmanı.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Hilal Apartmanı - Beyoğlu</h4>
+              <h4>Hilal Apartmanı - Küçükçekmece</h4>
               <p></p>
               <a href="assets/img/portfolio/hilal apartmanı.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Hilal Apartmanı"><i class="bx bx-plus"></i></a>
