--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="bx bxs-school"></i></div>
               <h4 class="title"><a href="">Apartman ve Site Yönetimi</a></h4>
               <p class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız.</p>
             </div>
@@ -148,7 +148,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-money-withdraw"></i></div>
               <h4 class="title"><a href="">Muhasebe</a></h4>
               <p class="description">Mali işlerinizi bizler yürütüyoruz ve güveniniz için minnettarız.</p>
             </div>
@@ -156,7 +156,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-library"></i></div>
               <h4 class="title"><a href="">Hukuk</a></h4>
               <p class="description">Hukukla alakalı bütün ihtiyaçlarınızı memnuniyetle yürütüyor ve bunu, yaşam
                 alanınızın huzurunu bozmadan yapıyoruz.</p>
@@ -165,7 +165,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
+              <div class="icon"><i class="bx bxs-tree"></i></div>
               <h4 class="title"><a href="">Temizlik</a></h4>
               <p class="description">Evinizde görmek istediğiniz temizliği yaşam alanınızın her yanında özenle
                 sağlıyoruz.</p>
@@ -173,21 +173,21 @@
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bxs-binoculars"></i></div>
               <h4 class="title"><a href="">Keşif</a></h4>
               <p class="description">Yaşam alanınınızı yerinde etüd ediyor ve gerekli önerilerde bulunuyoruz.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-been-here"></i></div>
               <h4 class="title"><a href="">Projelendirme</a></h4>
               <p class="description">İşletme bütçenizi ihtiyacınıza göre oluşturuyoruz.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-spreadsheet"></i></div>
               <h4 class="title"><a href="">Denetim</a></h4>
               <p class="description">Yaşam alanınızın haftalık, aylık denetimlerinizi yapıyoruz ve gördüğümüz eksikleri
                 gideriyoruz.</p>
@@ -195,7 +195,7 @@
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-task"></i></div>
               <h4 class="title"><a href="">Geliştirme</a></h4>
               <p class="description">Yaşam alanınızın eksiklerini görüyor ve gerekli iyileştirmeleri yapıyoruz.</p>
             </div>
@@ -626,7 +626,7 @@
                 class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Bizi arayın! Bizler bu konuda deneyimliyiz. Bize devretmeyi düşündüğünz anda sorunların çözüme bir
+                Bizi arayın! Bizler bu konuda deneyimliyiz. Bize devretmeyi düşündüğünüz anda sorunların çözüme bir
                 adım daha yaklaştığınızı göreceksiniz.
               </p>
             </div>
