--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/1.png" class="img-fluid" alt="">
+                <img src="assets/img/team/profile-pic.png" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -701,7 +701,7 @@
               </div>
               <div class="member-info">
                 <h4>Mert Denizman</h4>
-                <span>Satış-Pazarlama</span>
+                <span>Operasyon</span>
               </div>
             </div>
           </div>
