--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="Parga,PargaYonetimi,ApartmanYonetimi" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/pargalogo.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/pargalogo.png" rel="pargalogo">
+  <link href="assets/img/pargalogo.png" rel="pargalogo">
 
   <!-- Google Fonts -->
   <link
