--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="Parga,PargaYonetimi,ApartmanYonetimi" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="favicon">
-  <link href="assets/img/favicon.png" rel="favicon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link
