--- a/index.html
+++ b/index.html
@@ -446,6 +446,16 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/İMTAŞ.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>İmtaş Apartmanı - Kağıthane</h4>
+              <p></p>
+              <a href="assets/img/portfolio/İMTAŞ.png.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="İmtaş Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
